--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
     <!-- Emmet: .board-container>section.board*3>.board-header>(span.board-title{Board $}+button.board-add{Add Card}+button.board-toggle>i.fas.fa-chevron-down)^.board-columns>((.board-column>.board-column-title{New}+.board-column-content>.card*5>(.card-remove>i.fas.fa-trash-alt^.card-title{Card $}))+(.board-column>.board-column-title{In Progress}+.board-column-content>.card*5>(.card-remove>i.fas.fa-trash-alt^.card-title{Card $}))+(.board-column>.board-column-title{Testing}+.board-column-content>.card*5>(.card-remove>i.fas.fa-trash-alt^.card-title{Card $}))+(.board-column>.board-column-title{Done}+.board-column-content>.card*5>(.card-remove>i.fas.fa-trash-alt^.card-title{Card $}))) -->
 
     <div class="board-container">
+        <button class="board-add"><a href="{{ url_for('create_board') }}" class="board-add">Create Board</a></button>
         <section class="board">
             <div class="board-header"><span class="board-title">Board 1</span>
                 <button class="board-add">Add Card</button>
