--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,6 @@
 #boards {
     background-color: green;
 }
-
 :root{
     --border-radius: 3px;
     --status-1: #590000;
@@ -16,118 +15,96 @@ body{
     font-family: sans-serif;
 }
 
-h1, .board-title, .board-column-title{
-    font-weight: 100;
+.container {
+    width: 65%;
+    margin-bottom: 4vh;
+    margin-top: 4vh;
+    overflow: scroll;
+
+}
+#content-row-container {
+    height:70vh;
+    background: #E8E9EB;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+#header-Row {
+    background: whitesmoke;
+    border-radius: 5px;
 }
 
-h1{
+.margin_header {
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+
+#status-title {
     text-align: center;
-    font-size: 4em;
-    letter-spacing: 5px;
-    transform: scale(1.2, 1);
+    font-family: Verdana, sans-serif;
+    font-size: larger;
+    color: white;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    width: auto;
 }
-
-button{
-    background: #222;
-    color: #fff;
-    border: none;
-    font-size: 14px;
-    font-family: sans-serif;
-    padding: 4px 10px;
-}
-
-.board-container{
-    max-width: 960px;
-    margin: 0 auto;
-}
-
-section.board{
-    margin: 20px;
-    border: aliceblue;
-    background: #ffffff90;
-    border-radius: 3px;
-}
-
-.board-header{
-    height: 50px;
-    background: #fff;
-    border-radius: var(--border-radius) var(--border-radius) 0 0;
-}
-
-.board-title{
-    margin: 13px;
-    display: inline-block;
-    font-size: 20px;
-}
-.board-title, .board-add, .board-toggle{
-    display: inline-block;
-}
-
-.board-toggle{
-    float: right;
-    margin: 13px;
-}
-
-.board-columns{
-    display: flex;
-    flex-wrap: nowrap;
-}
-
-.board-column{
-    padding: 10px;
-    flex: 1;
-}
-
-.board-column-content{
-    min-height: 49px;
-}
-
-.board-column-content:empty{
-    /*This only works if the tag is really empty and there is not even whitespace inside*/
-    border: 4px solid #cdcdcd;
-    margin-top: 4px;
-    border-radius: 10px;
-    background: #eee;
-}
-
-.board-column-title{
+.cards {
     text-align: center;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    background-color: white;
+
 }
 
-.card{
-    position: relative;
-    background: #222;
-    color: #fff;
-    border-radius: var(--border-radius);
-    margin: 4px 0;
-    padding: 4px;
+#drop-over {
+    border-style: dashed;
+    background: rgba(111, 143, 175, 0.24);
+    color : #ddd;
+    border-color: black;
+}
+.dragged {
+  opacity: 0;
 }
 
-.board-column:nth-of-type(1) .card{
-    background: var(--status-1);
+.drag-feedback {
+    opacity: 1;
+    border: 1px solid dodgerblue;
 }
-
-.board-column:nth-of-type(2) .card{
-    background: var(--status-2);
+#deleteBoardButton:hover {
+    cursor: pointer;
+    transform: scale(1.5);
 }
-
-.board-column:nth-of-type(3) .card{
-    background: var(--status-3);
-}
-
-.board-column:nth-of-type(4) .card{
-    background: var(--status-4);
-}
-
-.card-remove{
-    display: block;
-    position: absolute;
-    top: 4px;
-    right: 4px;
-    font-size: 12px;
+#create-board-button {
     cursor: pointer;
 }
+.not_valid {
+    background: #FFCCCC;
+    border-color: red;
+}
+#not_valid_info {
+    background: #FFCCCC;
+    border-color: red;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+#content-columns-container {
+    background-color: rgba(111, 143, 175, 0.24);
+    min-height: 18vh;
+}
+#board-title:hover {
+    cursor: pointer;
+}
+#header-Row:hover {
+    border: 1px solid #6082B6;
+}
 
-.card-title{
-    padding-right: 16px;
+.dropdown-toggle::after {
+    display: none;
+}
+.private_board {
+    background: #89b8e1 !important;
+}
+div.col.border-right.border-dark.column_header {
+    background-color: #566DBA;
 }
