--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,7 +11,7 @@
 
 body{
     min-width: 620px;
-    background: #ddd url(http://cdn.backgroundhost.com/backgrounds/subtlepatterns/diagonal-noise.png);
+    background: white;
     font-family: sans-serif;
 }
 
