--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,10 +16,10 @@
     {% block link %}{% endblock %}
 </head>
 <body>
-   <nav class="navbar navbar-expand-lg navbar-light py-1 sticky-top" style="background-color: #6082B6;">
+   <nav class="navbar navbar-expand-lg navbar-light py-1 sticky-top" style="background-color: black;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/" style="font-size: larger">
-        PROMAN
+    <a class="navbar-brand" href="/" style="color: white; margin-top: 50px; margin-bottom: 50px; font-size: 20px; font-family: 'Verdana', sans-serif">
+        DO it ALL
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
