--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
         {% elif wrong_data %}
             <div class="wrong-data" hidden>Invalid username or password</div>
         {% elif after_register %}
-            <div class="wrong-data" hidden>Signed Up successful</div>
+            <div class="wrong-data" hidden>Signed Up successfully</div>
         {% endif %}
         <div>Password</div>
         <label for="password-register"></label>
