--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,7 @@
 #boards {
-    color: red;
+    background-color: red;
 }
+
 :root{
     --border-radius: 3px;
     --status-1: #590000;
@@ -24,12 +25,11 @@ body{
 
 #content-row-container {
     height:70vh;
-    background: #E8E9EB;
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
+    background: black;
 }
+
 #header-Row {
-    background: whitesmoke;
+    background-color: black;
     border-radius: 5px;
 }
 
@@ -45,15 +45,17 @@ body{
     font-family: Verdana, sans-serif;
     font-size: larger;
     color: white;
+    background-color: black;
     margin-top: 2vh;
     margin-bottom: 2vh;
     width: auto;
 }
+
 .cards {
     text-align: center;
     margin-top: 1vh;
     margin-bottom: 1vh;
-    background-color: white;
+    color: red;
 
 }
 
@@ -63,6 +65,7 @@ body{
     color : #ddd;
     border-color: black;
 }
+
 .dragged {
   opacity: 0;
 }
@@ -71,40 +74,52 @@ body{
     opacity: 1;
     border: 1px solid dodgerblue;
 }
+
 #deleteBoardButton:hover {
     cursor: pointer;
     transform: scale(1.5);
 }
+
 #create-board-button {
     cursor: pointer;
 }
+
 .not_valid {
     background: #FFCCCC;
     border-color: red;
 }
+
 #not_valid_info {
     background: #FFCCCC;
     border-color: red;
     margin-top: auto;
     margin-bottom: auto;
 }
+
 #content-columns-container {
-    background-color: rgba(111, 143, 175, 0.24);
+    background-color: #add8e6;
     min-height: 18vh;
 }
+
 #board-title:hover {
     cursor: pointer;
 }
+
 #header-Row:hover {
-    border: 1px solid #6082B6;
+    border: 1px solid black;
+    background-color: black;
 }
 
 .dropdown-toggle::after {
     display: none;
 }
+
 .private_board {
-    background: #89b8e1 !important;
+    background: greenyellow !important;
 }
+
 div.col.border-right.border-dark.column_header {
-    background-color: #566DBA;
+    background-color: black;
+    padding: 10px 10px 10px 10px;
+    color: black;
 }
